# moses-fixed

./: .gitignore  PATCH_NOTES.md  pyproject.toml
moses/: __init__.py  datasets.py
moses/metrics/: __init__.py  metrics.py  scaffold.py
moses/script/: cli.py
